@@ -8,6 +8,8 @@ https://svn.openplans.org/svn/opencore/trunk/docs/Plone2.5-Plone3-migration.txt
    for more instructions.
    (rafrombrc)
 
+ * Remove subproject-related cruft from opencore.project. (slinkp)
+
  * Force project content delete to be done via POST; if it's a GET,
    redirect to a confirmation form. Fixes #2010. (slinkp)
 
